# Clex-AI-Ultra-Core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/: CHINESE_COMMUNITY_POSTS.md  PIN_DESCRIPTION.md  PROMOTION_MATERIALS.md  RELEASE_COMPLETION_SUMMARY.md  RELEASE_NOTES_v0.1.0-public-alpha.md  SUMMARY.md  TWITTER_POSTS.md  WEEKLY_OPERATIONS.md  about.md
Clex-AI-Ultra Core v0.1.0-alpha/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md
Clex-AI-Ultra Core v0.1.0-alpha/core/: runtime-contracts.md
Clex-AI-Ultra Core v0.1.0-alpha/docs/: architecture.md  capability-groups.md  quick-start.md  release-plan.md  skills-guide.md
Clex-AI-Ultra Core v0.1.0-alpha/runtimes/python/: pyproject.toml  requirements-dev.txt
Clex-AI-Ultra Core v0.1.0-alpha/runtimes/python/clex_core/: __init__.py  cli.py  permissions.py  sdkclient.py  tasks.py  validator.py
Clex-AI-Ultra Core v0.1.0-alpha/runtimes/python/examples/: agent_team.py
Clex-AI-Ultra Core v0.1.0-alpha/runtimes/python/scripts/: validate_runtimes.py
Clex-AI-Ultra Core v0.1.0-alpha/runtimes/python/tests/: __init__.py
Clex-AI-Ultra Core v0.1.0-alpha/scripts/: install.ps1
Clex-AI-Ultra Core v0.1.0-alpha/specs/: permission.schema.json  skill-manifest.schema.json  (+1 more)
core/: skill-mapping.json
docs/: TOOLS.example.md  architecture.md  faq.md  installation.md  overview.md  release-plan.md  roadmap.md  tooling-example.md
examples/: README.md
scripts/: install.sh  validate-all.py  validate-skills.py
specs/: README.md  workflow.schema.json
(+63 files in other folders)
